# fautil

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CURSOR_RULES.md  DOCS_SUMMARY.md  GIT_CONFIG.md  PACKAGING.md  PROJECT_SUMMARY.md  README.md  pyproject.toml  pytest.ini
.cursor/: .cursorrules.common  .cursorrules.linux
.cursor/rules/: .cursorrules.macos  .cursorrules.monorepo  .cursorrules.monorepo.windows  .cursorrules.windows  my-custom-rule.mdc
.github/workflows/: docs.yml  pylint.yml
docs/: api.md  examples.md  getting-started.md  index.md  mkdocs.yml  user-guide.md
docs/docs/: api.md  examples.md  getting-started.md  index.md  user-guide.md
examples/: __init__.py  api_demo.py  discovery_demo.py  quickstart.py  run_api_service.py  service_lifecycle_demo.py
fautil/: __init__.py  update_version.py
fautil/cache/: __init__.py  local.py  redis.py
fautil/cli/: __init__.py  main.py  scaffold.py  utils.py
fautil/core/: __init__.py  app.py  config.py  events.py  exceptions.py  logging.py
fautil/db/: __init__.py  base.py  engine.py  transaction.py
fautil/messaging/: __init__.py  kafka.py  local.py
fautil/scheduler/: __init__.py  scheduler.py
fautil/service/: __init__.py  api_service.py  config_manager.py  discovery_manager.py  http_server_manager.py  injector_manager.py  lifecycle_manager.py  logging_manager.py  service_manager.py  shutdown_manager.py  views.py
fautil/storage/: __init__.py  minio.py
fautil/utils/: __init__.py  crypto.py  excel.py  id_generator.py  time.py
fautil/web/: __init__.py  cbv.py  context.py  exception_handlers.py  metrics.py  middleware.py  models.py
tests/: test_cbv.py
